--- a/src/app/merchant-store/merchant-store.component.html
+++ b/src/app/merchant-store/merchant-store.component.html
@@ -84,7 +84,7 @@
                 </div>
                    
                 <div class="sub1_box2_row5">
-                    <input type="submit" name="" id="" value="Edit" class="sbt_btn" (click)="editMerchant1()">
+                    <input type="submit" name="" id="" value="Apply" class="sbt_btn" (click)="editMerchant1()">
                 </div>
                 </form>
             </div>
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <div class="sub2_box2_row5">
-                    <input type="submit" name="" id="" value="Edit" class="sbt_btn" (click)="editMerchant2()">
+                    <input type="submit" name="" id="" value="Apply" class="sbt_btn" (click)="editMerchant2()">
                 </div>
                 </form>
             </div> 
