--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="display_box2_row1_col2">
                     <div class="box_rating">
-                    <span>4</span>
+                    <span>{{menuItem.m_rating}}</span>
                     <span class="material-symbols-outlined" id="star_icon">star</span>
                     </div>
             </div>
@@ -65,10 +65,28 @@
                 <div class="review_form">
                     <div class="review_form_box1">
                         <div class="star_rating">
-                            <span class="material-symbols-outlined">star</span>
-                            <span class="material-symbols-outlined">star</span>
-                            <span class="material-symbols-outlined">star</span>
-                            <span class="material-symbols-outlined">star</span>
+                            <div class="rating">
+                                <input value=5 name="star-radio" id="star-1" type="radio" [(ngModel)] = "reviewModel.user_rating">
+                                <label for="star-1">
+                                  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+                                </label>
+                                <input value=4  name="star-radio" id="star-2" type="radio" [(ngModel)] = "reviewModel.user_rating">
+                                <label for="star-2">
+                                  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+                                </label>
+                                <input value=3 name="star-radio" id="star-3" type="radio" [(ngModel)] = "reviewModel.user_rating">
+                                <label for="star-3">
+                                  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+                                </label>
+                                <input value=2 name="star-radio" id="star-4" type="radio" [(ngModel)] = "reviewModel.user_rating">
+                                <label for="star-4">
+                                  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+                                </label>
+                                <input value=1 name="star-radio" id="star-5" type="radio" [(ngModel)] = "reviewModel.user_rating">
+                                <label for="star-5">
+                                  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+                                </label>
+                              </div>
                         </div>
                     </div>
                     <div class="review_form_box2">
