--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,117 +1,129 @@
-.homie{
+.homie {
     background-color: white;
     min-height: 100vh;
 }
 
-.mainbox{
+.mainbox {
     position: relative;
     display: flex;
-   
+
 }
-.left{
-    
+
+.left {
+
     width: 70vw;
     min-height: 100vh;
-    
+
 }
-.right{
-    
+
+.right {
+
     width: 20vw;
-    height: 20vh;    
+    height: 20vh;
 }
-.search{
+
+.search {
     width: 100%;
     height: 15vh;
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    
+
 }
-.web_logo{
+
+.web_logo {
     width: 10vw;
     height: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    
+
+
 }
+
 /* filters component css*/
-form{
+form {
     width: 100%;
     height: 10vh;
     display: flex;
-    align-items:flex-start;
-    justify-content:center;
+    align-items: flex-start;
+    justify-content: center;
     background-color: transparent;
     position: relative;
 }
-.filters{
+
+.filters {
     width: 100%;
     height: 10vh;
     display: flex;
-    align-items:flex-start;
-    justify-content:center;
+    align-items: flex-start;
+    justify-content: center;
     position: relative;
     top: -2vh;
 }
-.filters .col1{
+
+.filters .col1 {
     height: 80%;
     width: 10%;
-    margin-right:1% ;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.5rem;
-    
-}
-.filters .col2{
-    
-    height: 80%;
-    width: 10%;
-    margin-right:1% ;
+    margin-right: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
 
 }
-.filters .col3{
-    
+
+.filters .col2 {
+
     height: 80%;
     width: 10%;
-    margin-right:1% ;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.5rem;
-}
-.filters .col4{
-    
-    height: 80%;
-    width: 10%;
-    margin-right:1% ;
+    margin-right: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
 
 }
-.filters .col5{
-    
+
+.filters .col3 {
+
     height: 80%;
     width: 10%;
-    margin-right:1% ;
+    margin-right: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
 }
-.filters .col6{
-    
+
+.filters .col4 {
+
+    height: 80%;
+    width: 10%;
+    margin-right: 1%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+
+}
+
+.filters .col5 {
+
+    height: 80%;
+    width: 10%;
+    margin-right: 1%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+}
+
+.filters .col6 {
+
     height: 80%;
     width: 12%;
-    margin-right:1% ;
+    margin-right: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -124,21 +136,22 @@ form{
     align-items: center;
     justify-content: space-between;
     background-color: #F0F0F0;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     border: 1px solid rgb(207, 207, 207);
     height: 100%;
     width: 100%;
     border-radius: 0.4rem;
-    
+
 }
 
-.btn-text{
+.btn-text {
     display: flex;
     color: #333;
     font-size: 1.2vw;
     text-align: center;
 }
-#arrow-dwn{
+
+#arrow-dwn {
     display: flex;
     font-size: 1vw;
     align-items: center;
@@ -149,95 +162,122 @@ form{
 /* Filters drop down menu css end here*/
 
 /*select input css starts here*/
+select {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    display: inline-block;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    cursor: pointer;
+    width: 5vw;
+    margin-left: 0.5vw;
+    margin-bottom: 0.4vh;
+}
+
+.select_box {
+    
+    width: 6vw;
+    height: 6vh;
+    background-color: #F0F0F0;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid rgb(207, 207, 207);
+    border-radius: 0.4rem;
+    padding-bottom: 0.4vh;
+}
+.select_box span{
+    margin-left: 0.5vw;
+}
+
 /*select input css ends here*/
 
 /*select drop down css starts here*/
 a,
 button {
-  font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
-.drop_menu
-{
-  position: relative;
+.drop_menu {
+    position: relative;
 }
 
-.drop_menu ul
-{
-  margin-top: 20px;
-  position: absolute;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  align-items: center;
-  width: 8vw;
-  height: 20vh;
-  background-color: #F0F0F0;
-  left: 0px;
-  list-style: none;
-  border-radius: 5%;
-  opacity: 0;
-  pointer-events: none;
-  transform: translateY(-15px);
-  transition: all 0.4s ease;
-  z-index: 1000;
-  box-shadow: 2px 2px 10px #E94b3cff;
-  border: 1px solid rgb(207, 207, 207);
-}
-.drop_menu li
-{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 15px;
+.drop_menu ul {
+    margin-top: 20px;
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    width: 8vw;
+    height: 20vh;
+    background-color: #F0F0F0;
+    left: 0px;
+    list-style: none;
+    border-radius: 5%;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-15px);
+    transition: all 0.4s ease;
+    z-index: 1000;
+    box-shadow: 2px 2px 10px #E94b3cff;
+    border: 1px solid rgb(207, 207, 207);
 }
 
-.drop_menu li:hover
-{
-  background-color:#e94b3cff;
-  border-radius: 5%;
-  
+.drop_menu li {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
 }
 
-.drop_menu a{
-  color: black;
-  text-decoration: none;
+.drop_menu li:hover {
+    background-color: #e94b3cff;
+    border-radius: 5%;
+
 }
 
-.drop_menu button{
-  
-  font-size: 1.2vw;
-  font-weight: lighter;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%;
-  outline: none;
-  border: none;
-  border-radius: 0.4rem;
-  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-  color: #333;
-  text-align: center;
-  background-color: #F0F0F0;
+.drop_menu a {
+    color: black;
+    text-decoration: none;
+}
+
+.drop_menu button {
+
+    font-size: 1.2vw;
+    font-weight: lighter;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 0.4rem;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    color: #333;
+    text-align: center;
+    background-color: #F0F0F0;
 
 
 }
 
-.drop_menu button:focus + ul{
-  opacity: 1;
-  pointer-events:fill;
-  transform: translateY(0px);
+.drop_menu button:focus+ul {
+    opacity: 1;
+    pointer-events: fill;
+    transform: translateY(0px);
 }
-.drop_menu button:hover{
+
+.drop_menu button:hover {
     color: #e94b3cff;
     transition: all 0.50s ease;
 }
-button{
+
+button {
     border: none;
     outline: none;
 }
@@ -248,16 +288,16 @@ button{
 
 /*Result box css starts here*/
 
-.display{
+.display {
 
     height: 58vh;
     width: 85vw;
     position: relative;
-    top: -4vh; 
+    top: -4vh;
     padding-left: 1.5vw;
     z-index: 200;
     margin-left: 5vw;
-    
+
 }
 
 
@@ -266,14 +306,14 @@ button{
     width: 20vw;
     border-radius: 1vw;
     border: 1px solid rgb(207, 207, 207);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     margin: 1.2vw;
     margin-left: 4vw;
 
 }
 
 
-.r1{
+.r1 {
     width: 20vw;
     height: 30vh;
     display: flex;
@@ -281,19 +321,23 @@ button{
     justify-content: center;
     border-radius: 1vw;
 }
-.r1_pic{
+
+.r1_pic {
     width: 19vw;
     height: 27vh;
     border-radius: 2vw;
 }
-.r1_img{
+
+.r1_img {
     border-radius: 1vw;
 }
-.r2{
+
+.r2 {
     width: 20vw;
     height: 15vh;
 }
-.r3{
+
+.r3 {
     height: 5vh;
     width: 20vw;
     align-items: center;
@@ -302,22 +346,24 @@ button{
     font-size: 1.2vw;
 }
 
-.r2_box1{
+.r2_box1 {
     width: 20vw;
     height: 7.5vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+
 }
-.r2_box1 .r2_c1{
+
+.r2_box1 .r2_c1 {
     height: 95%;
     width: 70%;
     margin-left: 2%;
     display: flex;
-    align-items:center;
+    align-items: center;
 }
-.r2_box1 .r2_c2{
+
+.r2_box1 .r2_c2 {
     height: 95%;
     width: 20%;
     margin-right: 2%;
@@ -325,50 +371,54 @@ button{
     justify-content: center;
     align-items: center;
 }
-.box_rating{
+
+.box_rating {
     width: 60%;
     height: 70%;
     border-radius: 20%;
     color: white;
     font-size: 1.2vw;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     background-color: #32751d;
-    
+
 }
-#star_icon{
+
+#star_icon {
     font-size: 1.2vw;
-    
+
 }
 
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 40
-
+    font-variation-settings:
+        'FILL' 1,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 40
 }
 
-#dist_icon{
+#dist_icon {
     font-size: 1vw;
 }
-.r2_box2{
+
+.r2_box2 {
     width: 100%;
     height: 50%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.r2_box2 .r2_c1{
+
+.r2_box2 .r2_c1 {
     height: 95%;
     width: 70%;
     margin-left: 2%;
     display: flex;
-    align-items:center;
+    align-items: center;
 }
-.r2_box2 .r2_c2{
+
+.r2_box2 .r2_c2 {
     height: 95%;
     width: 20%;
     margin-right: 2%;
@@ -376,7 +426,8 @@ button{
     justify-content: center;
     align-items: center;
 }
-.box_distance{
+
+.box_distance {
     width: 60%;
     height: 70%;
     background-color: grey;
@@ -384,52 +435,56 @@ button{
     color: white;
     font-size: 1vw;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
-    
+
 }
+
 .info_box {
     margin-left: 2%;
     color: #333;
     font-size: 1.2vw;
-    
+
 }
 
-.result_button{
+.result_button {
     border-radius: 2vw;
     background-color: transparent;
 }
+
 /*results box css ends here*/
 
 /*Search bar css starts here*/
-.search_container{
+.search_container {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content:left;
+    justify-content: left;
 
 
 }
-.search_box{
+
+.search_box {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
-.search_bar{
+.search_bar {
     width: 52vw;
     height: 8vh;
     background-color: #F0F0F0;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     display: flex;
     border-radius: 60px;
     padding: 10px 20px;
     align-items: center;
-    
+
 }
-.search_bar input{
+
+.search_bar input {
     width: 30vw;
     height: 2vh;
     background: transparent;
@@ -439,7 +494,8 @@ button{
     padding: 10% 5%;
     outline: none;
 }
-.search_bar button{
+
+.search_bar button {
     border-radius: 50%;
     border: 0;
     width: 5vw;
@@ -448,12 +504,13 @@ button{
     cursor: pointer;
 
 }
-::placeholder{
+
+::placeholder {
     color: black;
 }
 
 
-#opt{
+#opt {
     width: 8vw;
     height: 5vh;
     cursor: pointer;
@@ -461,10 +518,11 @@ button{
     border-radius: 3%;
     outline: none;
     font-size: 15px;
-    background:transparent;
+    background: transparent;
     color: black;
 
 }
+
 /* search bar css ends here*/
 
 
