--- a/src/app/merchant-reviews/merchant-reviews.component.html
+++ b/src/app/merchant-reviews/merchant-reviews.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="head">
     <div class="heading">
-      <h1>Users Review Logs</h1>
+      <h1>Users Review </h1>
     </div>
   </div>
   <div class="review_table">
